--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block body %}
-<div class="title"><h1 style="text-align: center;"><u> Tools Apps</u></h1>
-    <p style="text-align: center;">The all in one tools app</p>
+<div class="title"><h1 style="text-align: center;"><u> Tools App</u></h1>
+    <p style="text-align: center;">This website contain Many Tools from calculator to metric conversions as well as you can write your To-DO list</p>
     <p style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home</a></p>
 </div>
 
