--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,12 @@
     {% block head %}{% endblock %}
 </head>
 <body>
+    <div>
     {% block body %}{% endblock %}
-    <div id="footer"><p  style="text-align: center;">This Page is developed and managed by Nimit Banka <br> Contact <br>Phone: 9546607724<br><a href ="mailto: nimit.banka@gmail.com">nimit.banka@gmail.com</a></p>
-    <br>
     </div>
+    <br>
+<footer><p  style="text-align: center;">This Page is developed and managed by Nimit Banka <br> Contact <a href ="mailto: nimit.banka@gmail.com">nimit.banka@gmail.com</a></p>
+    <br>
+</footer>
 </body>
 </html>
