--- a/templates/conversion.html
+++ b/templates/conversion.html
@@ -8,30 +8,32 @@
 <div class="title"><h1 style="text-align: center;"><u> Metric Conversion</u></h1>
     <p style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home</a> >> <a href="{{url_for('conversion')}}">Conversion</a></p>
 </div><br>
-<div class="parent">
-
-    <div class="child">
-        <p style="text-align: center;">Temperature Conversion<br>
-            <a href="{{ url_for('temperature') }}">
-                <button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
-            </a>
-        </p>
-    </div>
-    <div class="child">
-        <p style="text-align: center;">Weight Conversion<br><br>
-            <a href="{{ url_for('weight') }}">
-                <button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
-            </a>
-        </p>
-    </div>
-    <div class="child">
-        <p style="text-align: center;">Length Conversion<br><br>
-            <a href="{{ url_for('length') }}">
-                <button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
-            </a>
-        </p>
-    </div>
-</div>
+<section class="info">
+    
+    <section class="cards-wrapper" style="grid-template-columns: 1fr 1fr 1fr">
+      <div class="card-grid-space">
+        <a class="card" href="{{ url_for('temperature') }}" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
+          <div>
+            <h1>Temperature Conversion</h1>
+          </div>
+        </a>
+      </div>
+      <div class="card-grid-space">
+        <a class="card" href="{{ url_for('weight') }}" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+          <div>
+            <h1>Weight Conversion</h1>
+          </div>
+        </a>
+      </div>
+      <div class="card-grid-space">
+          <a class="card" href="{{ url_for('length') }}" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+            <div>
+              <h1>Length Conversion</h1>
+            </div>
+          </a>
+        </div>
+      </section>
+</section>
 
 <h5 style="text-align: center;">Click on the button to visit the main page..<a href="{{ url_for('mainpage') }}"><button type="button" class="glow-on-hover">Click here</button></a></h5>
 
