--- a/templates/main.html
+++ b/templates/main.html
@@ -9,37 +9,44 @@
     <p style="text-align: center;">This website contain Many Tools from calculator to metric conversions as well as you can write your To-DO list</p>
     <p style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home</a></p>
 </div>
+<section class="info">
+    
+  <section class="cards-wrapper">
+    <div class="card-grid-space">
+      <a class="card" href="{{ url_for('taskmanager') }}" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
+        <div>
+          <h1>To-Do List</h1>
+          <p>List out your daily targets.</p>
+        </div>
+      </a>
+    </div>
+    <div class="card-grid-space">
+      <a class="card" href="{{ url_for('cal_bmi') }}" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+        <div>
+          <h1>BMI Calculator</h1>
+          <p>Calculate your BMI and eat accordingly</p>
+        </div>
+      </a>
+    </div>
+    <div class="card-grid-space">
+        <a class="card" href="{{ url_for('calculator') }}" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+          <div>
+            <h1>Calculator</h1>
+            <p>Simple calculator to perform daily calculations</p>
+          </div>
+        </a>
+      </div>
+    <div class="card-grid-space">
+      <a class="card" href="{{ url_for('conversion') }}" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+        <div>
+          <h1>Metric Coversions</h1>
+          <p></p>
+        </div>
+      </a>
+    </div>
+    </section>
+</section>
 
-<br><div class="parent">
 
-    <div class="child">
-        <p style="text-align: center;">List out your tasks<br>
-            <a href="{{ url_for('taskmanager') }}">
-                <button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
-            </a>
-        </p>
-    </div>
-    <div class="child">
-        <p style="text-align: center;">Calculate your BMI <br>
-            <a href="{{ url_for('cal_bmi') }}">
-                <button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
-            </a>
-        </p>
-    </div>
-    <div class="child">
-        <p style="text-align: center;">Open Simple Calculator<br>
-            <a href="{{ url_for('calculator') }}">
-                <button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
-            </a>
-        </p>
-    </div>
-    <div class="child">
-        <p style="text-align: center;">Metric Coversions <br><br>
-            <a href="{{ url_for('conversion') }}">
-                <button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
-            </a>
-        </p>
-    </div>
-</div>
 
 {% endblock %}
