--- a/templates/conversion.html
+++ b/templates/conversion.html
@@ -10,7 +10,7 @@
 </div><br>
 <section class="info">
     
-    <section class="cards-wrapper" style="grid-template-columns: 1fr 1fr 1fr">
+    <section class="cards-wrapper">
       <div class="card-grid-space">
         <a class="card" href="{{ url_for('temperature') }}" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
           <div>
