--- a/templates/main.html
+++ b/templates/main.html
@@ -44,6 +44,14 @@
         </div>
       </a>
     </div>
+    <div class="card-grid-space">
+      <a class="card" href="{{ url_for('games') }}" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+        <div>
+          <h1>Games</h1>
+          <p></p>
+        </div>
+      </a>
+    </div>
     </section>
 </section>
 
