--- a/templates/games.html
+++ b/templates/games.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block body %}
-<div class="title"><h1 style="text-align: center;"><u> GAMES</u></h1>
+<div class="title"><h1 style="text-align: center;"><u>GAMES</u></h1>
     <p style="text-align: center;">More Games Under development</p>
-    <p style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home</a></p>
+    <p style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home</a><a href="{{ url_for('games') }}">Games</a></p>
 </div>
 <section class="info">
     
