--- a/templates/rps.html
+++ b/templates/rps.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    
+    <p style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home >>  </a><a href="{{ url_for('games') }}">Games >> </a><a href="{{ url_for('rps') }}">Rock-Papper-Scissor</a></p>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/rps.css') }}">
 
