--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="title"><h1 style="text-align: center;"><u> Tools App</u></h1>
     <p style="text-align: center;">This website contain Many Tools from calculator to metric conversions as well as you can write your To-DO list</p>
-    <span style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home</a></span><span style="text-align: right; margin-left: 80%; margin-right: 10px;"><a href="{{ url_for('form') }}">Signup to our news letter</a></span>
+    <span style="text-align: left;"><a href="{{ url_for('mainpage') }}">Home</a></span><span style="text-align: right; margin-left: 80%; margin-right: 10px;"></span>
 </div>
 <section class="info">
     
